--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_display_list">Display List Activity</string>
     <string name="title_activity_display_text">Display Text Activity</string>
+    <string name="title_activity_daily_question">Daily Question</string>
 </resources>
